--- a/unit_08.html
+++ b/unit_08.html
@@ -73,7 +73,7 @@
             <p> Задача решается с помощью цикла. В каждой итерации цикл выводит 6 звездочек без пробелов и символ
                 переноса строки br. Количество строк (итераций, повторений) цикла while вводит пользователь в i-6.
             </p>
-            <div class="form-control">Input i-6 <input type="number" class="i-6"></div>
+            <div class="form-control">Input i-6 <input type="number" class="i-6" value="6"></div>
             <button class="button-primary b-6">Task-6</button>
             <div class="out-6"></div>
         </section>
