--- a/unit_08.html
+++ b/unit_08.html
@@ -88,7 +88,7 @@
             4 3 2 1 0
             </pre>
             <p>Задача решается с помощью цикла while.</p>
-            <div class="form-control">Input i-7 <input type="number" class="i-7"></div>
+            <div class="form-control">Input i-7 <input type="number" class="i-7" value="4"></div>
             <button class="button-primary b-7">Task-7</button>
             <div class="out-7"></div>
         </section>
