--- a/unit_08.html
+++ b/unit_08.html
@@ -122,8 +122,8 @@
                 6 7 8
             </pre>
             <p> Задача решается с помощью цикла. Подсказка - вначале делаем проверку, а потом запускаем цикл while.</p>
-            <div class="form-control">Input i-91 <input type="number" class="i-91"></div>
-            <div class="form-control">Input i-92 <input type="number" class="i-92"></div>
+            <div class="form-control">Input i-91 <input type="number" class="i-91" value="4"></div>
+            <div class="form-control">Input i-92  <input type="number" class="i-92" value="8"></div>
             <button class="button-primary b-9">Task-9</button>
             <div class="out-9"></div>
         </section>
